[package]
name = "on-cron"
authors = ["itowlson <ivan.towlson@fermyon.com>"]
description = "Cron job callback"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
spin-sdk = "3.1.0"
cenote-dtos = { path = "../cenote-dtos" }
chrono = "0.4.39"

[workspace]
